# rust-sample-project

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/catalog_search/: catalog_search_repository.rs  catalog_search_service.rs  catalog_search_types.rs  mod.rs
